--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,11 +17,15 @@
   },
   "homepage": "https://github.com/CarlosMs18/rest_api_cloudinary_node_js#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.0",
+    "mongoose": "^6.3.2"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16"
   }
 }
