--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/CarlosMs18/rest_api_cloudinary_node_js#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.29.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.3.2"
+    "mongoose": "^6.3.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
